--- a/erp/templates/base.html
+++ b/erp/templates/base.html
@@ -37,6 +37,7 @@
         <a class="navbar-brand" href="/inventory">재고 현황</a>
         <a class="navbar-brand" href="/productcreate">상품 등록</a>
         <a class="navbar-brand" href="/inboundcreate">입고</a>
+        <a class="navbar-brand" href="/outboundcreate">출고</a>
 
         <form class="form-inline my-2 my-lg-0">
 
