--- a/erp/templates/products/outbound_create.html
+++ b/erp/templates/products/outbound_create.html
@@ -1,10 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %}
+    출고
+{% endblock %}
+
+{% block content %}
+    <div class="container">
+        <div class="wrap">
+            <h2 class="title-center"> 출고 상품 등록 </h2>
+            <form class="form-area" method="post" action="{% url 'inbound-create' %}">
+                {% csrf_token %}
+                <div class="form-group mt-2 mb-2">
+                    <label for="product_code">상품 코드</label>
+                    <select class="form-select" aria-label="Default select example" id="product_code" name="product_code">
+                        <option value="" disabled selected>선택하세요</option>
+                        {% for product in product_list %}
+                            <option value="{{ product.product_code }}">{{ product.product_code }}</option>
+                        {% endfor %}
+                    </select>
+                    {% if errors.product_code %}
+                        <span class="text-danger">{{ errors.product_code }}</span>
+                    {% endif %}
+                </div>
+                <div class="form-group mt-2 mb-2">
+                    <label for="inbound">수량</label>
+                    <input type="number" class="form-control" id="inbound" name="inbound" value="{{ form.inbound.value }}">
+                    {% if errors.inbound %}
+                        <span class="text-danger">{{ errors.inbound }}</span>
+                    {% endif %}
+                </div>
+                {% if error %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ error }}
+                    </div>
+                {% endif %}
+                <hr>
+                <div style="float: right">
+                    <button type="submit" class="btn btn-primary">등록하기</button>
+                    <a href="/" class="btn btn-secondary">취소하기</a>
+                </div>
+            </form>
+        </div>
+    </div>
+{% endblock %}
