--- a/erp/templates/base.html
+++ b/erp/templates/base.html
@@ -33,11 +33,18 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="/">재고관리시스템</a>
-        <a class="navbar-brand" href="/inventory">재고 현황</a>
-        <a class="navbar-brand" href="/productcreate">상품 등록</a>
-        <a class="navbar-brand" href="/inboundcreate">입고</a>
-        <a class="navbar-brand" href="/outboundcreate">출고</a>
+        {% if not user.is_authenticated %} {# 유저가 인증이 되어있지 않다면 #}
+                {# 로그인, 회원가입 화면 표시 #}
+                <a class="navbar-brand" href="/">재고관리시스템</a>
+            {% else %} {# 그렇지 않다면 - 인증이 되어있다면 #}
+
+                <a class="navbar-brand" href="/">재고관리시스템</a>
+                <a class="navbar-brand" href="/inventory">재고 현황</a>
+                <a class="navbar-brand" href="/productcreate">상품 등록</a>
+                <a class="navbar-brand" href="/inboundcreate">입고</a>
+                <a class="navbar-brand" href="/outboundcreate">출고</a>
+            {% endif %} {# if문 종료 #}
+        
 
         <form class="form-inline my-2 my-lg-0">
 
