--- a/erp/templates/products/inbound_create.html
+++ b/erp/templates/products/inbound_create.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="container">
         <div class="wrap">
-            <h2 class="title-center"> 입고 상품 등록 </h2>
+            <h2 class="title-center"> 입고 </h2>
             <form class="form-area" method="post" action="{% url 'inbound-create' %}">
                 {% csrf_token %}
                 <div class="form-group mt-2 mb-2">
