--- a/erp/templates/products/outbound_create.html
+++ b/erp/templates/products/outbound_create.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="container">
         <div class="wrap">
-            <h2 class="title-center"> 출고 상품 등록 </h2>
+            <h2 class="title-center"> 출고 </h2>
             <form class="form-area" method="post" action="{% url 'outbound-create' %}">
                 {% csrf_token %}
                 <div class="form-group mt-2 mb-2">
@@ -23,10 +23,10 @@
                     {% endif %}
                 </div>
                 <div class="form-group mt-2 mb-2">
-                    <label for="inbound">수량</label>
-                    <input type="number" class="form-control" id="inbound" name="inbound" value="{{ form.inbound.value }}">
-                    {% if errors.inbound %}
-                        <span class="text-danger">{{ errors.inbound }}</span>
+                    <label for="outbound">수량</label>
+                    <input type="number" class="form-control" id="outbound" name="outbound" value="{{ form.outbound.value }}">
+                    {% if errors.outbound %}
+                        <span class="text-danger">{{ errors.outbound }}</span>
                     {% endif %}
                 </div>
                 {% if error %}
