--- a/erp/templates/products/product_create.html
+++ b/erp/templates/products/product_create.html
@@ -22,7 +22,7 @@
                 {% endif %}
                 <div class="form-group mt-2 mb-2">
                     <label for="product_code">상품 코드</label>
-                    <input type="text" class="form-control" id="product_code" name="product_code" required="required">
+                    <input type="number" class="form-control" id="product_code" name="product_code" required="required">
                 </div>
 
                 <div class="form-group mt-2 mb-2">
@@ -33,10 +33,13 @@
                     <label for="product_size">상품 사이즈</label>
                     <select class="form-select" aria-label="Default select example" id="product_size" name="product_size" required="required">
                         <option selected="selected" disabled="disabled" value="">상품 사이즈를 선택하세요</option>
+                        <option value="XS">X-Small</option>                        
                         <option value="S">Small</option>
                         <option value="M">Medium</option>
                         <option value="L">Large</option>
+                        <option value="XL">X-Large</option>                       
                         <option value="F">Free</option>
+                        
                     </select>
                 </div>
                 <div class="form-group mt-2 mb-2">
