--- a/erp/templates/products/home.html
+++ b/erp/templates/products/home.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} 
+<!-- introduce.html 파일 -->
+{% extends 'base.html' %}
 
 {% block title %}
     메인
@@ -6,7 +7,16 @@
 
 {% block content %}
 
-   <div>
-    메인
-    </div>
+<style>
+    
+</style>
+<div class="container">
+    <h1>재고관리시스템</h1>
+    <p>:</p>
+    <ul>
+        <li>상품 등록</li>
+        <li>입고/출고 등록</li>
+        <li>재고 현황 조회</li>
+    </ul>
+</div>
 {% endblock %}
