--- a/erp/templates/products/inventory.html
+++ b/erp/templates/products/inventory.html
@@ -1,48 +1,49 @@
 {% extends 'base.html' %}
+
 {% block title %}
     재고 현황
 {% endblock %}
-{% block content %}
-<style>
-    #inven_ul{
-    list-style: none;
-    margin: 0;
-    
-    padding: 0;
-    overflow: hidden;
-    }
-    .inven_li{
-    list-style: none;
-    float: left;
-    width:120px;
-    }
-    </style>
-    <div class="inventory_title">
-        <h4> 재고 현황 </h4>
-    </div>
-    <table>
-        <ul id="inven_ul" style = "font-weight : bold;">
-            <li class = "inven_li">코드</li>
-            <li class = "inven_li"> | 이름</li>
-            <li class = "inven_li"> | 사이즈</li>
-            <li class = "inven_li"> | 가격</li>
-            <li class = "inven_li"> | 설명</li>
-            <li class = "inven_li"> | 입고 날짜</li>
-            <li class = "inven_li"> | 출고 날짜</li>
-            <li class = "inven_li"> | 재고량</li>
-        </ul>
-        {% for cat in product_list %}
-                <ul id="inven_ul">
-                    <li class = "inven_li">{{ cat.product.product_code }}</li>
-                    <li class = "inven_li"> | {{ cat.product.product_name }}</li>
-                    <li class = "inven_li"> | {{ cat.product.product_size }}</li>
-                    <li class = "inven_li"> | {{ cat.product.product_price }}원</li>
-                    <li class = "inven_li"> | {{ cat.product.product_desc }}</li>
-                    <li class = "inven_li"> | {{ cat.product.inbound_date }}</li>
-                    <li class = "inven_li"> | {{ cat.product.outbound_date }}</li>
-                    <li class = "inven_li"> | {{ cat.stock }}</li>
 
-                </ul>
+{% block content %}
+{% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
         {% endfor %}
+    </ul>
+{% endif %}
+<div class="container">
+  <h2 class="text-center my-4">재고 현황</h2>
+  <div class="table-responsive">
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th scope="col">코드</th>
+          <th scope="col">이름</th>
+          <th scope="col">사이즈</th>
+          <th scope="col">가격</th>
+          <th scope="col">설명</th>
+          <th scope="col">입고 날짜</th>
+          <th scope="col">출고 날짜</th>
+          <th scope="col">재고량</th>
+        </tr>
+      </thead>
+      {% load humanize %}
+      <tbody>
+        {% for cat in product_list %}
+        <tr>
+          <th scope="row">{{ cat.product.product_code }}</th>
+          <td>{{ cat.product.product_name }}</td>
+          <td>{{ cat.product.product_size }}</td>
+          <td>{{ cat.product.product_price|intcomma }}</td>
+          <td>{{ cat.product.product_desc }}</td>
+          <td>{{ cat.product.inbound_date }}</td>
+          <td>{{ cat.product.outbound_date }}</td>
+          <td>{{ cat.stock|intcomma }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
     </table>
+  </div>
+</div>
 {% endblock %}
