--- a/erp/templates/user/signin.html
+++ b/erp/templates/user/signin.html
@@ -10,7 +10,7 @@
             <form class="form-area" action="/sign-in/" method="post">
                 {% csrf_token %}
                 <div class="form-group mt-2 mb-2">
-                    <label for="username">이름</label>
+                    <label for="username">아이디</label>
                     <input type="text" class="form-control" id="username" name="username">
                 </div>
                 <div class="form-group mt-2 mb-2">
