--- a/erp/templates/user/signup.html
+++ b/erp/templates/user/signup.html
@@ -10,8 +10,12 @@
             <form class="form-area" method="post" action="/sign-up/">
                 {% csrf_token %}
                 <div class="form-group mt-2 mb-2">
-                    <label for="username">이름</label>
+                    <label for="username">아이디</label>
                     <input type="text" class="form-control" id="username" name="username">
+                </div>
+                <div class="form-group mt-2 mb-2">
+                    <label for="name">이름</label>
+                    <input type="text" class="form-control" id="name" name="name">
                 </div>
                 <div class="form-group mt-2 mb-2">
                     <label for="password">비밀번호</label>
@@ -21,10 +25,7 @@
                     <label for="password2">비밀번호 확인</label>
                     <input type="password" class="form-control" id="password2" name="password2">
                 </div>
-                <div class="form-group mt-2 mb-2">
-                    <label for="bio">나를 한마디로</label>
-                    <input type="text" class="form-control" id="bio" name="bio">
-                </div>
+                
                 <hr>
                 <div style="float: right">
                     <button type="submit" class="btn btn-primary">회원가입</button>
