--- a/erp/templates/products/inventory.html
+++ b/erp/templates/products/inventory.html
@@ -12,7 +12,7 @@
         {% endfor %}
     </ul>
 {% endif %}
-<div class="container">
+<div class="container" style="width:70%">
   <h2 class="text-center my-4">재고 현황</h2>
   <div class="table-responsive">
     <table class="table table-striped table-hover">
