--- a/erp/templates/user/signin.html
+++ b/erp/templates/user/signin.html
@@ -1,29 +1,13 @@
 {% extends 'base.html' %}
 
-{% block title %}
-    로그인
-{% endblock %}
 {% block content %}
-    <div class="container">
-        <div class="wrap">
-            <h2 class="title-center"> 로그인</h2>
-            <form class="form-area" action="/sign-in/" method="post">
-                {% csrf_token %}
-                <div class="form-group mt-2 mb-2">
-                    <label for="username">아이디</label>
-                    <input type="text" class="form-control" id="username" name="username">
-                </div>
-                <div class="form-group mt-2 mb-2">
-                    <label for="password">비밀번호</label>
-                    <input type="password" class="form-control" id="password" name="password">
-                </div>
-                <hr>
-                <div style="float: right">
-                    <button type="submit" class="btn btn-primary">로그인</button>
-                    <a href="/sign-up" class="btn btn-secondary">회원가입 페이지로</a>
-                </div>
-            </form>
-
-        </div>
-    </div>
+<h1>Sign In</h1>
+<form method="POST">
+  {% csrf_token %}
+  <label for="id_username">Username:</label>
+  <input type="text" id="id_username" name="username"><br>
+  <label for="id_password">Password:</label>
+  <input type="password" id="id_password" name="password"><br>
+  <input type="submit" value="Sign In">
+</form>
 {% endblock %}
