--- a/erp/templates/user/signin.html
+++ b/erp/templates/user/signin.html
@@ -1,13 +1,36 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Sign In</h1>
-<form method="POST">
-  {% csrf_token %}
-  <label for="id_username">Username:</label>
-  <input type="text" id="id_username" name="username"><br>
-  <label for="id_password">Password:</label>
-  <input type="password" id="id_password" name="password"><br>
-  <input type="submit" value="Sign In">
-</form>
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card mt-5">
+        <div class="card-header">
+          <h3 class="card-title text-center">로그인</h3>
+        </div>
+        <div class="card-body">
+          <form method="post">
+            {% csrf_token %}
+            {% for field in form %}
+              <div class="form-group">
+                <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+                {{ field }}
+                {% if field.help_text %}
+                  <small class="form-text text-muted">{{ field.help_text }}</small>
+                {% endif %}
+                {% for error in field.errors %}
+                  <div class="invalid-feedback">{{ error }}</div>
+                {% endfor %}
+              </div>
+            {% endfor %}
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary btn-block">로그인</button>
+            </div>
+          </form>
+          <div class="text-center">
+            <a href="/sign-up">회원가입 페이지로</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
