--- a/erp/templates/user/signup.html
+++ b/erp/templates/user/signup.html
@@ -1,10 +1,46 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Sign Up</h1>
-<form method="POST">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" value="Sign Up">
-</form>
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card mt-5">
+        <div class="card-header">
+          <h3 class="card-title text-center">회원가입</h3>
+        </div>
+        <div class="card-body">
+          <form method="post">
+            {% csrf_token %}
+            {% for field in form %}
+              <div class="form-group">
+                <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+                {{ field }}
+                {% if field.help_text %}
+                  <small class="form-text text-muted">{{ field.help_text }}</small>
+                {% endif %}
+                {% for error in field.errors %}
+                  <div class="invalid-feedback">{{ error }}</div>
+                {% endfor %}
+              </div>
+            {% endfor %}
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary btn-block">회원가입</button>
+            </div>
+          </form>
+          <div class="text-center">
+            <a href="/sign-in">로그인 페이지로</a>
+          </div>
+          {% if form.errors %}
+            <div class="error-message">
+              {% for field, errors in form.errors.items %}
+                {% for error in errors %}
+                  <li style="color:red">{{ error }}</li>
+                {% endfor %}
+              {% endfor %}
+            </div>
+          {% endif %}
+
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
